--- a/LabStaff/templates/viewRequests.html
+++ b/LabStaff/templates/viewRequests.html
@@ -16,7 +16,7 @@
                     <!-- small box -->
                     <div class="small-box bg-warning">
                         <div class="inner">
-                            <h3>4</h3>
+                            <h3>{{number_of_requests}}</h3>
 
                             <p> Test Requests Pending</p>
                         </div>
