--- a/AdminSHS/templates/adminHome.html
+++ b/AdminSHS/templates/adminHome.html
@@ -22,13 +22,12 @@
                     <!-- small box -->
                     <div class="small-box bg-info">
                         <div class="inner">
-                            <h3>2</h3>
-                            <p>Upcoming Appointments</p>
+                            <p><h3>Employee Records</h3></p>
                         </div>
                         <div class="icon">
                             <i class="fas fa-stethoscope"></i>
                         </div>
-                        <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                        <a href="createEmployeeRecords.html" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
                 <!-- ./col -->
@@ -36,14 +35,13 @@
                     <!-- small box -->
                     <div class="small-box bg-success">
                         <div class="inner">
-                            <h3>8</h3>
 
-                            <p>Total Visits</p>
+                            <p><h3>Internal Files</h3></p>
                         </div>
                         <div class="icon">
                             <i class="ion ion-stats-bars"></i>
                         </div>
-                        <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                        <a href="showInternalFiles.html" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
                 <!-- ./col -->
@@ -51,14 +49,12 @@
                     <!-- small box -->
                     <div class="small-box bg-warning">
                         <div class="inner">
-                            <h3>4</h3>
-
-                            <p> Test Requests Pending</p>
+                            <p><h3>Transaction requests</h3></p>
                         </div>
                         <div class="icon">
                             <i class="fas fa-heartbeat"></i>
                         </div>
-                        <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                        <a href="appointmentTransactionRequests.html" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
                 <!-- ./col -->
@@ -66,14 +62,12 @@
                     <!-- small box -->
                     <div class="small-box bg-danger">
                         <div class="inner">
-                            <h3>1</h3>
-
-                            <p> Active Diagnosis</p>
+                            <p><h3>Log files</h3></p>
                         </div>
                         <div class="icon">
                             <i class="fas fa-plus-square"></i>
                         </div>
-                        <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                        <a href="showLogFiles.html" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
                 <!-- ./col -->
