--- a/AdminSHS/templates/showInsuranceFiles.html
+++ b/AdminSHS/templates/showInsuranceFiles.html
@@ -1,4 +1,5 @@
 {% include 'adminNavbar.html' %}
+{% load encrypt%}
 
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -20,11 +21,12 @@
                 }, 2000)
             </script>
             <ul class="nav nav-tabs">
-                <li><a href="showInternalFiles.html">Patient Files</a></li>
-                <li><a href="showDoctorFiles.html">Doctor Files</a></li>
+                <li><a href="/adminSHS/showInternalFiles/{{k|patient_id_encrypt_tag:id}}">Patient Files</a></li>
+                <li><a href="/adminSHS/showDoctorFiles/{{k|patient_id_encrypt_tag:id}}">Doctor Files</a></li>
                 <li class="active"><a href="#insuranceFiles">Insurance Files</a></li>
-                <li><a href="showLabFiles.html">Lab Files</a></li>
-                <li><a href="showHospitalFiles.html">Hospital Files</a></li>
+                <li><a href="/adminSHS/showLabFiles/{{k|patient_id_encrypt_tag:id}}">Lab Files</a></li>
+                <li><a href="/adminSHS/showHospitalFiles/{{k|patient_id_encrypt_tag:id}}">Hospital Files</a></li>
+
             </ul>
             <div class="tab-content">
                 <div id="insuranceFiles">
