--- a/AdminSHS/templates/updateEmployeeRecords.html
+++ b/AdminSHS/templates/updateEmployeeRecords.html
@@ -1,4 +1,5 @@
 {% include 'adminNavbar.html' %}
+{% load encrypt%}
 
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
