--- a/Hospitalportal/templates/register.html
+++ b/Hospitalportal/templates/register.html
@@ -94,8 +94,9 @@ a {
     <label for="patient_phone_no"><b>Phone Number</b></label>
     <input type="text" placeholder="Enter Phone Number" name="patient_phone_no" id="patient_phone_no" required>
     <label for="patient_email"><b>Email</b></label>
-    
     <input type="text" placeholder="Enter Email" name="patient_email" id="patient_email" required>
+    <label for="patient_card_details"><b>Credit / Debit card details</b></label>
+    <input type="text" placeholder="Enter Card details" name="patient_card_details" id="patient_card_details" required>
     <div>
 
 </div>
