Hospital staff portal

--- a/Hospitalportal/templates/register.html
+++ b/Hospitalportal/templates/register.html
@@ -78,6 +78,7 @@ a {
     {% for message in messages %}
     <h3> {{ message }}</h3>
     {% endfor %}
+
     <label for="patient_name"><b>Username</b></label>
     <input type="text" placeholder="Enter Username" name="patient_name" id="patient_name" required>
     <div>
@@ -111,7 +112,7 @@ a {
   </div>
   
   <div class="container signin">
-    <p>Already have an account? <a href="#">Sign in</a>.</p>
+    <p>Already have an account? <a href='Login'>Sign in</a>.</p>
   </div>
 </form>
 
