--- a/LabStaff/templates/labStaffHome.html
+++ b/LabStaff/templates/labStaffHome.html
@@ -176,3 +176,12 @@
 </body>
 
 </html>
+<script>
+    (function () {
+        window.onpageshow = function(event) {
+            if (event.persisted) {
+                window.location.reload();
+            }
+        };
+    })();
+</script>
