--- a/LabStaff/templates/updateReportPage.html
+++ b/LabStaff/templates/updateReportPage.html
@@ -105,3 +105,12 @@
 </body>
 
 </html>
+<script>
+    (function () {
+        window.onpageshow = function(event) {
+            if (event.persisted) {
+                window.location.reload();
+            }
+        };
+    })();
+</script>
