--- a/LabStaff/templates/viewRequests.html
+++ b/LabStaff/templates/viewRequests.html
@@ -101,3 +101,12 @@
 </body>
 
 </html>
+<script>
+    (function () {
+        window.onpageshow = function(event) {
+            if (event.persisted) {
+                window.location.reload();
+            }
+        };
+    })();
+</script>
