--- a/Patients/templates/profileUpdateRequest.html
+++ b/Patients/templates/profileUpdateRequest.html
@@ -162,7 +162,8 @@ border-radius:0!important;
                                                 </div>
                                                 <div id="collapseOne" class="collapse" aria-labelledby="infraOne" data-parent="#accordion">
                                                     <div class="card-body">
-                                                    Using Amazon AWS technology which is an industry leader for reliability you will be able to experience an uptime in the vicinity of 99.95%.
+                                                    A User can book the appointment by navigating to the side bar and selecting the Book Appointment from the menu. 
+                                                    Add Firstname, Lastname, Requested Date and you can opt a doctor or can book a general Appointment from the dropdown
                                                     </div>
                                                 </div>
                                             </div><!-- close card-->
@@ -174,7 +175,9 @@ border-radius:0!important;
                                                 </div>
                                                 <div id="collapseTwo" class="collapse" aria-labelledby="infraTwo" data-parent="#accordion">
                                                     <div class="card-body">
-                                                    Solodev CMS is built using PHP, Javascript, HTML and CSS.
+                                                    After Navigating to the Book Appointment from the Side Menu, there are two tabs - Book Appoinment and View appointments
+                                                    Select View Appointments and you can view a edit icon for pending records. You cannot update the confirmed appointments but can be 
+                                                    cancelled.
                                                     </div>
                                                 </div>
                                             </div><!-- card-->
@@ -186,8 +189,8 @@ border-radius:0!important;
                                                 </div>
                                                 <div id="collapseThree" class="collapse" aria-labelledby="infraThree" data-parent="#accordion">
                                                     <div class="card-body">
-                                                    We support the current and previous major releases of Google Chrome™, Firefox®, Safari®, Microsoft® Edge™, and Internet Explorer® on a rolling basis. Each time a new version is released, we begin supporting that version and stop supporting the third most recent version.
-                                                    </div>
+                                                   A request to change the personal info can be done from the Contact in the top menu bar.
+                                                   Hospotal STaff will recieve your request and then update the changes
                                                 </div>
                                             </div><!-- card-->
 
@@ -199,52 +202,13 @@ border-radius:0!important;
                                                 </div>
                                                 <div id="collapseThree" class="collapse" aria-labelledby="infraThree" data-parent="#accordion">
                                                     <div class="card-body">
-                                                    We support the current and previous major releases of Google Chrome™, Firefox®, Safari®, Microsoft® Edge™, and Internet Explorer® on a rolling basis. Each time a new version is released, we begin supporting that version and stop supporting the third most recent version.
+                                                     A Appointment can be cancelled only after the confirmation. That can be done from the Book Appoinmnet menu from the nav bar
                                                     </div>
                                                 </div>
                                             </div>
                                         </div><!-- accordion-->
                                     </div><!-- tab 1-->
-                                <div id="tab2" class="tab-pane fade">
-                                    <div class="accordion">
-                                        <div class="card">
-                                            <div class="card-header" id="aboutOne">
-                                                <a href="#collapseFour"   data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseOne">
-                                                    <p class="mb-0">What are the benefits of Solodev CMS?</p>
-                                                </a>
-                                            </div>
-                                            <div id="collapseFour" class="collapse" aria-labelledby="aboutOne" data-parent="#accordion">
-                                                <div class="card-body">
-                                                With Solodev CMS, you and your visitors will benefit from a finely-tuned technology stack that drives the highest levels of site performance, speed and engagement - and contributes more to your bottom line. 
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="card">
-                                            <div class="card-header" id="aboutTwo">
-                                                <a href="#collapseFive" class="collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseTwo">
-                                                  <p class="mb-0">How easy is it to build a website with Solodev CMS?</p>
-                                                </a>
-                                            </div>
-                                            <div id="collapseFive" class="collapse" aria-labelledby="aboutTwo" data-parent="#accordion">
-                                                <div class="card-body">
-                                                Building a website is extremely easy. With a working knowledge of HTML and CSS you will be able to have a site up and running in no time.
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="card">
-                                            <div class="card-header" id="aboutThree">
-                                                <a href="#collapseSix" class="collapsed" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseThree">
-                                                  <p class="mb-0">Can I get a personalized demonstration of Solodev CMS?</p>
-                                                </a>
-                                            </div>
-                                            <div id="collapseSix" class="collapse" aria-labelledby="aboutThree" data-parent="#accordion">
-                                                <div class="card-body">
-                                                Yes, click here to request a demo and one of our representatives will contact you shortly to setup a time convenient to you.
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div><!-- accordion-->
-                                </div><!-- tab2 -->
+                                
                               </div><!-- tab content-->
                             </div>
                         </div>
