--- a/Doctors/templates/doctorHome.html
+++ b/Doctors/templates/doctorHome.html
@@ -68,8 +68,7 @@
                    Today Appointments
                   </h3>
                   <!-- tools card -->
-                  <div class="card-tools">
-                    <!-- button with a dropdown -->
+                  <!-- <div class="card-tools">
                     <form action="searchAppointments" method="get" class="d-flex">
                         <label for="start">Select date:</label>
                         <input type="date" name="start" value={{date}} min="2018-01-01" max="2022-12-31">
@@ -77,7 +76,7 @@
                             <i class="fa fa-search"></i>
                         </button>
                     </form>
-                  </div>
+                  </div> -->
                   <!-- /. tools -->
                 </div>
                 <!-- /.card-header -->
