--- a/Patients/templates/navbar.html
+++ b/Patients/templates/navbar.html
@@ -58,7 +58,7 @@
     <div class="sidebar">
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="info">
-          <a href="#" class="d-block">Welcome, {{id}}</a> 
+          <a href="#" class="d-block">Welcome, {{k|name_from_id:id}}</a> 
         </div>
       </div>
       <!-- Sidebar Menu -->
@@ -77,7 +77,7 @@
             </a>
           </li>
           <li class="nav-item">
-           <a href="/patient/insuranceClaimRequest/{{k|patient_id_encrypt_tag:id}}" class="nav-link">
+            <a href="/patient/insuranceClaimRequest/{{k|patient_id_encrypt_tag:id}}" class="nav-link">
                 <i class="nav-icon fas fa-medkit"></i>
                     <p> Insurance Claim </p>
             </a>
