--- a/HospitalStaff/templates/navbar1.html
+++ b/HospitalStaff/templates/navbar1.html
@@ -40,10 +40,10 @@
         <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="/hospitalStaff/hospitalStaffHome/{{user}}" class="nav-link">Home</a>
+        <a href="/hospitalStaff/hospitalStaffHome/{{k|getHospitalStaffId:user}}" class="nav-link">Home</a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="#" class="nav-link">Contact</a>
+        <a href="#" class="nav-link">Hospital Staff Portal</a>
       </li>
     </ul>
 
