script for logout

--- a/Doctors/templates/patientDiagnosis.html
+++ b/Doctors/templates/patientDiagnosis.html
@@ -83,4 +83,13 @@
         </p>
     </a>
         </div></section>
-</div>
+</div>
+<script>
+    (function () {
+        window.onpageshow = function(event) {
+            if (event.persisted) {
+                window.location.reload();
+            }
+        };
+    })();
+</script>
