--- a/Doctors/templates/viewLabReports.html
+++ b/Doctors/templates/viewLabReports.html
@@ -42,3 +42,12 @@
         </div>
     </section>
 </div>
+<script>
+    (function () {
+        window.onpageshow = function(event) {
+            if (event.persisted) {
+                window.location.reload();
+            }
+        };
+    })();
+</script>
