--- a/HospitalStaff/templates/updatepersonalinfo.html
+++ b/HospitalStaff/templates/updatepersonalinfo.html
@@ -51,3 +51,12 @@
     </table>
     
 </div>              
+<script>
+    (function () {
+        window.onpageshow = function(event) {
+            if (event.persisted) {
+                window.location.reload();
+            }
+        };
+    })();
+</script>
