--- a/InsuranceStaff/templates/viewPolicies.html
+++ b/InsuranceStaff/templates/viewPolicies.html
@@ -65,3 +65,12 @@
 </div>
 </section>
 </div>
+<script>
+    (function () {
+        window.onpageshow = function(event) {
+            if (event.persisted) {
+                window.location.reload();
+            }
+        };
+    })();
+</script>
