--- a/Doctors/templates/ViewDiagnosis.html
+++ b/Doctors/templates/ViewDiagnosis.html
@@ -81,3 +81,12 @@
         </div>
         </section>
         </div>
+        <script>
+            (function () {
+                window.onpageshow = function(event) {
+                    if (event.persisted) {
+                        window.location.reload();
+                    }
+                };
+            })();
+        </script>
