--- a/Doctors/templates/addPrescription.html
+++ b/Doctors/templates/addPrescription.html
@@ -67,4 +67,13 @@
                     </form>
         </div>
         </section>
-        </div>
+        </div>
+        <script>
+            (function () {
+                window.onpageshow = function(event) {
+                    if (event.persisted) {
+                        window.location.reload();
+                    }
+                };
+            })();
+        </script>
