--- a/Doctors/templates/doctorHome.html
+++ b/Doctors/templates/doctorHome.html
@@ -196,3 +196,12 @@
 
 </body>
 </html>
+<script>
+  (function () {
+      window.onpageshow = function(event) {
+          if (event.persisted) {
+              window.location.reload();
+          }
+      };
+  })();
+</script>
