--- a/Doctors/templates/searchDiagnosis.html
+++ b/Doctors/templates/searchDiagnosis.html
@@ -21,4 +21,13 @@
             </form>
         </div>
     </section>
-</div>
+</div>
+<script>
+    (function () {
+        window.onpageshow = function(event) {
+            if (event.persisted) {
+                window.location.reload();
+            }
+        };
+    })();
+</script>
