--- a/HospitalStaff/templates/approveAppointment.html
+++ b/HospitalStaff/templates/approveAppointment.html
@@ -94,3 +94,12 @@
     </table>
     
 </div>
+<script>
+    (function () {
+        window.onpageshow = function(event) {
+            if (event.persisted) {
+                window.location.reload();
+            }
+        };
+    })();
+</script>
