--- a/HospitalStaff/templates/edit.html
+++ b/HospitalStaff/templates/edit.html
@@ -28,3 +28,12 @@
         
     </div>
 </div>
+<script>
+  (function () {
+      window.onpageshow = function(event) {
+          if (event.persisted) {
+              window.location.reload();
+          }
+      };
+  })();
+</script>
