--- a/HospitalStaff/templates/staffHome.html
+++ b/HospitalStaff/templates/staffHome.html
@@ -173,3 +173,12 @@
 
 </body>
 </html>
+<script>
+  (function () {
+      window.onpageshow = function(event) {
+          if (event.persisted) {
+              window.location.reload();
+          }
+      };
+  })();
+</script>
