--- a/HospitalStaff/templates/transactions.html
+++ b/HospitalStaff/templates/transactions.html
@@ -48,3 +48,12 @@
     </table>
     
 </div>
+<script>
+    (function () {
+        window.onpageshow = function(event) {
+            if (event.persisted) {
+                window.location.reload();
+            }
+        };
+    })();
+</script>
