--- a/InsuranceStaff/templates/insurancePayments.html
+++ b/InsuranceStaff/templates/insurancePayments.html
@@ -67,3 +67,12 @@
 </div>
 </section>
 </div>
+<script>
+    (function () {
+        window.onpageshow = function(event) {
+            if (event.persisted) {
+                window.location.reload();
+            }
+        };
+    })();
+</script>
